--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drydock",
-  "version": "0.6.1",
+  "version": "0.1.1",
   "description": "Drydock is a starter project for Jekyll that uses modern front-end tooling.",
   "main": "gulpfile.js",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ginfuru/fradrydocksco.git"
+    "url": "https://github.com/ginfuru/drydocksco.git"
   },
   "keywords": [
     "Autoprefixer",
