--- a/_config.yml
+++ b/_config.yml
@@ -28,15 +28,24 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
 exclude:
   - Gemfile
   - Gemfile.lock
   - drydock.config.js
+  - gulp_tasks
   - gulpfile.js
   - LICENSE
   - node_modules
   - npm-debug.log
-  - yarn.lock # for those that use yarn
   - package.json
   - package-lock.json # for those that use npm
   - README.md
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/rub/
+  - yarn.lock # for those that use yarn
