--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "sass": "bundle exec gulp sass",
     "watch": "bundle exec gulp watch",
     "deploy": "bundle exec gulp deploy"
-
   },
   "repository": {
     "type": "git",
@@ -49,7 +48,9 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-rsync": "^0.0.8",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^5.0.0",
     "imagemin-pngquant": "^5.0.1",
