--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: "Drydock: A Scaffold for Jekyll"
-email: your-email@domain.com
+email: client-email@client_domain.com
 description: >
   Drydock is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
 baseurl: "" # the subpath of your site, e.g. /blog
