--- a/package.json
+++ b/package.json
@@ -1,63 +1,60 @@
 {
-  "name": "dry-dock",
-  "version": "0.1.4",
+  "name": "flight-deck",
+  "version": "0.1.5",
   "description": "Flight Deck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
-  "main": "gulpfile.js",
-  "scripts": {
-    "preinstall": "bundle install --path vendor/bundle",
-    "start": "bundle exec gulp",
-    "test": "bundle exec gulp test",
-    "browsersync": "bundle exec gulp browsersync",
-    "browsersync-production": "bundle exec gulp browsersync --production",
-    "build": "bundle exec gulp build --production",
-    "eslint": "bundle exec gulp eslint",
-    "imagemin": "bundle exec gulp imagemin",
-    "production": "bundle exec gulp --production",
-    "sass": "bundle exec gulp sass",
-    "watch": "bundle exec gulp watch",
-    "deploy": "bundle exec gulp deploy"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/PortsideIO/flightdeck.git"
-  },
-  "keywords": [
-    "Autoprefixer",
-    "Browsersync",
-    "gulp",
-    "imagemin",
-    "Jekyll",
-    "PostCSS",
-    "Sass",
-    "Webpack"
-  ],
-  "author": "Portside",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/PortsideIO/flightdeck/issues"
-  },
-  "homepage": "https://github.com/PortsideIO/flightdeck",
-  "devDependencies": {
-    "autoprefixer": "^8.0.0",
-    "browser-sync": "^2.23.6",
-    "eslint-config-google": "^0.9.1",
-    "eslint-loader": "^1.9.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^4.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rsync": "^0.0.8",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^5.0.0",
-    "imagemin-pngquant": "^5.0.1",
-    "require-dir": "^1.0.0",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^3.11.0",
-    "webpack-stream": "^4.0.1",
-    "yargs": "^11.0.0"
+    "main": "gulpfile.js",
+    "scripts": {
+      "preinstall": "bundle install --path vendor/bundle",
+      "start": "bundle exec gulp",
+      "test": "bundle exec gulp test",
+      "browsersync": "bundle exec gulp browsersync",
+      "browsersync-production": "bundle exec gulp browsersync --jekyllEnv='production'",
+      "build": "bundle exec gulp build --jekyllEnv='production'",
+      "eslint": "bundle exec gulp eslint",
+      "imagemin": "bundle exec gulp imagemin",
+      "production": "bundle exec gulp --jekyllEnv='production'",
+      "sass": "bundle exec gulp sass",
+      "watch": "bundle exec gulp watch"
+    },
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/PortsideIO/flightdeck.git"
+    },
+    "keywords": [
+      "Autoprefixer",
+      "Browsersync",
+      "gulp",
+      "imagemin",
+      "Jekyll",s
+      "PostCSS",
+      "Sass",
+      "Webpack"
+    ],
+    "author": "Kite",
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/PortsideIO/flightdeck/issues"
+    },
+    "homepage": "https://github.com/PortsideIO/flightdeck/",
+    "devDependencies": {
+      "autoprefixer": "^8.0.0",
+      "browser-sync": "^2.23.6",
+      "eslint-config-google": "^0.9.1",
+      "eslint-loader": "^2.0.0",
+      "gulp": "^3.9.1",
+      "gulp-eslint": "^4.0.2",
+      "gulp-imagemin": "^4.1.0",
+      "gulp-newer": "^1.4.0",
+      "gulp-plumber": "^1.2.0",
+      "gulp-postcss": "^7.0.1",
+      "gulp-sass": "^4.0.1",
+      "gulp-uglify": "^3.0.0",
+      "gulp-watch": "^5.0.0",
+      "imagemin-pngquant": "^5.0.1",
+      "require-dir": "^1.0.0",
+      "vinyl-named": "^1.1.0",
+      "webpack": "^4.7.0",
+      "webpack-stream": "^4.0.1",
+      "yargs": "^11.0.0"
+    }
   }
-}
