--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "Browsersync",
       "gulp",
       "imagemin",
-      "Jekyll",s
+      "Jekyll",
       "PostCSS",
       "Sass",
       "Webpack"
