update vscode workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
 	"files.exclude": {
     "**/.sass-cache/": true,
-    "**/_site/": true
+    "**/_site/": true,
+    ".bundle/": true
   },
   "files.associations": {
     "*.html": "jekyll"
@@ -11,6 +12,7 @@
     "_site/**": true,
     ".vscode/**": true,
     "*.lock": true,
-    "node_modules/": true
+    "node_modules/": true,
+    ".bundle/": true
   }
 }
