--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "Sass",
     "Webpack"
   ],
-  "author": "Kite",
+  "author": "Ginfuru",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/PortsideIO/flightdeck/issues"
