--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Flight Deck: A Scaffold for Jekyll"
+title: 'Flight Deck: A Scaffold for Jekyll'
 email: client-email@client_domain.com
 description: >
   Flight Deck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: '' # the subpath of your site, e.g. /blog
+url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: portsideio
-github_username:  portsideio
+github_username: portsideio
+google_analytics: # https://minimalanalytics.com/
 
 # Build settings
 markdown: kramdown
