--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ description: >
   Flight Deck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: portsideio
-github_username: portsideio
+twitter_username: ginfuru
+github_username: ginfuru
 
 # SEO
 #image: /assets/images/open_graph_image.png
-google_analytics: # https://minimalanalytics.com/
+google_analytics: # UA-XXXXXXXX-XX https://minimalanalytics.com/
 
 # Build settings
 markdown: kramdown
