--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "flight-deck",
-  "version": "0.8.6",
+  "name": "flightdeck",
+  "version": "0.8.7",
   "description": "Flight Deck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
   "main": "gulpfile.js",
   "scripts": {
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PortsideIO/flightdeck.git"
+    "url": "https://github.com/ginfuru/Flightdeck.git"
   },
   "keywords": [
     "Autoprefixer",
@@ -34,30 +34,33 @@
   "author": "Ginfuru",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/PortsideIO/flightdeck/issues"
+    "url": "https://github.com/ginfuru/Flightdeck/issues"
   },
-  "homepage": "https://github.com/PortsideIO/flightdeck/",
+  "homepage": "https://github.com/ginfuru/Flightdeck/",
   "devDependencies": {
-    "autoprefixer": "^9.1.0",
-    "browser-sync": "^2.24.4",
+    "autoprefixer": "^9.0.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.26.3",
+    "cryptiles": ">=4.1.2",
     "eslint-config-google": "^0.9.1",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^2.1.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-eslint": "^5.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rsync": "^0.0.8",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.1",
-    "gulp-watch": "^5.0.1",
+    "gulp-watch": "^5.0.0",
     "imagemin-pngquant": "^6.0.0",
+    "natives": "^1.1.6",
     "require-dir": "^1.0.0",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.16.5",
-    "webpack-stream": "^5.1.0",
+    "webpack": "^4.16.1",
+    "webpack-stream": "^5.0.0",
     "yargs": "^12.0.1"
-  },
-  "dependencies": {}
+  }
 }
