adds incremental to config by default

--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 'Flight Deck: A Scaffold for Jekyll'
+title: 'Flightdeck: A Scaffold for Jekyll'
 email: client-email@client_domain.com
 description: >
-  Flight Deck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
+  Flightdeck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ginfuru
@@ -28,6 +28,7 @@ google_analytics: # UA-XXXXXXXX-XX -> https://minimalanalytics.com/
 
 # Build settings
 markdown: kramdown
+incremental: true
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
