--- a/.editorconfig
+++ b/.editorconfig
@@ -12,9 +12,9 @@ indent_size = 2
 trim_trailing_whitespace = false
 
 [*.html]
-indent_style = tab
+indent_style = space
 indent_size = 2
 
 [*.{css,scss}]
-indent_style = tab
+indent_style = space
 indent_size = 2
