--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username: ginfuru
 
 # SEO
 #image: /assets/images/open_graph_image.png
-google_analytics: # UA-XXXXXXXX-XX -> https://minimalanalytics.com/
+gaCode: # UA-XXXXXXXX-XX
 
 # Build settings
 markdown: kramdown
