--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,18 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing these this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: 'Flightdeck: A Scaffold for Jekyll'
-email: client-email@client_domain.com
+title:
+owner: epluno
+email: customersupport@epluno.com
 description: >
-  Flightdeck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
+  Once upon a time is just a myth do not let time slip away.
 baseurl: '' # the subpath of your site, e.g. /blog
-url: '' # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ginfuru
-github_username: ginfuru
+url: 'https://elevar.poweredbyepluno.com' # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO
 #image: /assets/images/open_graph_image.png
-gaCode: # UA-XXXXXXXX-XX
+gaCode: # UA-XXXXXXXX-X X
 
 # Build settings
 markdown: kramdown
-incremental: true
+incremental: false
 # plugins:
 
 # Exclude from processing.
