--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rsync": "^0.0.8",
     "gulp-sass": "^4.0.1",
-    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svg-symbols": "^3.2.3",
+    "gulp-svgmin": "^2.2.0",
     "gulp-watch": "^5.0.0",
     "natives": "^1.1.6",
     "require-dir": "^1.0.0",
