--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-rsync": "^0.0.8",
     "gulp-sass": "^4.0.1",
     "gulp-svg-symbols": "^3.2.3",
