--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flightdeck",
-  "version": "0.9.8",
+  "version": "0.9.9",
   "description": "Flightdeck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
   "main": "gulpfile.js",
   "scripts": {
@@ -55,15 +55,16 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-imagemin": "^6.1.1",
+    "gulp-imagemin": "^7.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-rsync": "^0.0.8",
     "gulp-sass": "^4.0.1",
+    "gulp-svg-symbols": "^3.2.3",
+    "gulp-svgmin": "^2.2.0",
     "gulp-watch": "^5.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^8.0.0",
     "natives": "^1.1.6",
     "require-dir": "^1.0.0",
     "vinyl-named": "^1.1.0",
