--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,23 @@
 {
-	"files.exclude": {
+  "files.exclude": {
     "**/.sass-cache/": true,
-    "**/.jekyll-cache/": true,
     "**/_site/": true,
-    ".bundle/": true
+    ".bundle": true
   },
-  "files.associations": {},
   "search.exclude": {
     "**/.sass-cache/": true,
-    "**/.jekyll-cache/": true,
+    "**/.publish/": true,
     "_site/**": true,
     ".vscode/**": true,
     "*.lock": true,
     "node_modules/": true,
-    ".bundle/": true
+    ".bundle/": true,
+    "**/css/*": true,
+  },
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#5c28fa",
+    "titleBar.activeForeground": "#c8ddfc",
+    "titleBar.inactiveBackground": "#0060ff5D",
+    "titleBar.inactiveForeground": "#cdec4c",
   },
 }
