--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-rsync": "^0.0.8",
     "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-symbols": "^3.2.3",
     "gulp-svgmin": "^2.2.0",
     "gulp-watch": "^5.0.0",
