Update to entire workflow - removes gulp files - adds npm scripts for clean and watch of jekyll -- jekyll server with livereload and open url

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ gaCode: # UA-XXXXXXXX-XX
 
 # Build settings
 markdown: kramdown
-incremental: true
+incremental: false
+disable_disk_cache: true
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
