--- a/package.json
+++ b/package.json
@@ -5,36 +5,26 @@
   "main": "gulpfile.js",
   "scripts": {
     "preinstall": "bundle install --path vendor/bundle",
-    "start": "bundle exec gulp",
-    "test": "bundle exec gulp test",
-    "browsersync": "bundle exec gulp browsersync",
-    "browsersync-production": "bundle exec gulp browsersync --jekyllEnv='production'",
-    "build": "bundle exec gulp build --jekyllEnv='production'",
-    "deploy": "bundle exec gulp deploy",
-    "eslint": "bundle exec gulp eslint",
-    "imagemin": "bundle exec gulp imagemin",
-    "production": "bundle exec gulp --jekyllEnv='production'",
-    "sass": "bundle exec gulp sass",
-    "watch": "bundle exec gulp watch"
+    "start": "run-p watch:jekyll watch:parcel bs:start",
+    "clean": "run-s clean:jekyll clean:depends",
+    "watch:jekyll": "bundle exec jekyll server -l -o",
+    "clean:jekyll": "run-s bundle exec jekyll clean",
+    "clean:depends": "rm -rf node_modules yarn.lock package-lock.json Gemfile.lock"
   },
   "browserslist": [
     "> 1%",
     "last 4 versions",
     "Firefox ESR"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ginfuru/Flightdeck.git"
-  },
+  "repository": "https://github.com/ginfuru/Flightdeck.git",
   "keywords": [
     "Autoprefixer",
     "Browsersync",
-    "gulp",
-    "imagemin",
+    "Imagemin",
     "Jekyll",
+    "Parcel",
     "PostCSS",
-    "Sass",
-    "Webpack"
+    "Sass"
   ],
   "author": "Ginfuru",
   "license": "MIT",
@@ -43,44 +33,16 @@
   },
   "homepage": "https://github.com/ginfuru/Flightdeck/",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "autoprefixer": "^9.6.4",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.6",
-    "browserslist": "^4.7.0",
-    "cryptiles": ">=4.1.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-eslint": "^6.0.0",
-    "gulp-imagemin": "^7.0.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-rsync": "^0.0.8",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-symbols": "^3.2.3",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-watch": "^5.0.0",
-    "natives": "^1.1.6",
-    "prettier": "^2.0.4",
-    "require-dir": "^1.0.0",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^4.41.1",
-    "webpack-stream": "^5.0.0",
-    "yargs": "^14.2.0"
+    "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-imagemin": "^4.0.1",
+    "prettier": "^2.1.2",
+    "sass": "^1.29.0",
+    "stylelint": "^13.7.2",
+    "stylelint-prettier": "^1.1.2",
+    "svg-sprite-generator": "^0.0.7"
   },
   "dependencies": {}
 }
