adds npm scripts to run parcel with jekyll & browsersync
- adds keep_files to jekyll config
- adds output directories for asset compiling (sass/js)
- updates vscode workspace settings
- fixes sytax for liquid
- adds flightdeck info under about
- adds post about jekyll + parcel
- updates original welcome post with original info
- updates minima file with different `$brand-color`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "files.exclude": {
     "**/.sass-cache/": true,
-    "**/_site/": true,
+    "**/_site/": false,
     ".bundle": true
   },
   "search.exclude": {
