--- a/package.json
+++ b/package.json
@@ -5,12 +5,23 @@
   "main": "gulpfile.js",
   "scripts": {
     "preinstall": "bundle install --path vendor/bundle",
-    "start": "run-p watch:jekyll watch:parcel bs:start",
-    "clean": "run-s clean:jekyll clean:depends",
-    "watch:images": "parcel watch assets/images/*",
-    "watch:jekyll": "bundle exec jekyll server -l -o",
-    "bs:start": "browser-sync start --config bs.config.js",
-    "clean:jekyll": "run-s bundle exec jekyll clean",
+    "start": "run-p jekyll watch:parcel bs:start",
+    "jekyll": "bundle exec jekyll build --watch",
+    "watch:parcel": "run-p watch:css watch:js watch:images",
+    "watch:css": "parcel watch assets/css/app.scss --out-dir _site/assets/css",
+    "watch:js": "parcel watch assets/js/bundle.js --out-dir _site/assets/js",
+    "watch:images": "parcel watch assets/images/* --out-dir _site/assets/images",
+    "build": "run-s clean prod:*",
+    "prod:jekyll": "bundle exec jekyll build JEKYLL_ENV=production",
+    "prod:parcel": "run-p build:css build:js build:images build:postcss",
+    "build:css": "parcel build assets/css/app.scss --out-dir _site/assets/css",
+    "build:postcss": "npx postcss _site/assets/css/app.css --use autoprefixer -d .",
+    "build:js": "parcel build assets/js/bundle.js --out-dir _site/assets/js",
+    "build:images": "parcel build assets/images/* --out-dir _site/assets/images",
+    "bs:start": "browser-sync start --config .browsersyncrc",
+    "svg": "svg-sprite-generate -d assets/svgs -o assets/icons",
+    "flush": "run-s clean clean:depends",
+    "clean": "bundle exec jekyll clean && rm -rf .cache",
     "clean:depends": "rm -rf node_modules yarn.lock package-lock.json Gemfile.lock"
   },
   "browserslist": [
@@ -35,6 +46,8 @@
   },
   "homepage": "https://github.com/ginfuru/Flightdeck/",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.6",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
