--- a/.postcssrc
+++ b/.postcssrc
@@ -1,8 +1,6 @@
 {
 	"plugins": {
-		"autoprefixer": {
-      "browsers": ["last 2 version"]
-    }
+		"autoprefixer": {}
 	},
 	"excludedPackages": []
 }
