--- a/.postcssrc
+++ b/.postcssrc
@@ -1,6 +1,8 @@
 {
-	"plugins": {
-		"autoprefixer": {}
-	},
-	"excludedPackages": []
+  "plugins": {
+    "autoprefixer": {
+      "grid": true
+    }
+  }
 }
+// TODO: add Autoprefixer >=9.86
