updates to overall workflow - updates to jekyll 4.1.1 - browsersync config update -- file name change to JS file -- adds throttle to slow browsersync down - package.json update -- removes delay command in favor of bs throttle

--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "build:postcss": "npx postcss _site/assets/css/app.css --use autoprefixer -d .",
     "build:js": "parcel build assets/js/bundle.js --out-dir _site/assets/js",
     "build:images": "parcel build assets/images/* --out-dir _site/assets/images",
-    "bs:start": "browser-sync start --config .browsersyncrc",
-    "bs:delay": "run-s delay:message delay bs:start",
+    "bs:start": "browser-sync start --config browser-sync.config.js",
+    "bs:delay": "run-s delay:message bs:start",
     "svg": "svg-sprite-generate -d assets/svgs -o assets/icons",
-    "delay": "sleep 5",
-    "delay:message": "echo '\u001b[33mBrowsersync will launch after Assets finish...\u001b[0m'" ,
+    "delay:message": "echo '\u001b[33mBrowsersync will launch after Assets finish...\u001b[0m'",
     "flush": "run-s clean clean:depends",
     "clean": "bundle exec jekyll clean && rm -rf .cache .parcel-cache",
     "clean:depends": "rm -rf node_modules yarn.lock package-lock.json Gemfile.lock"
