--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "imagemin": "bundle exec gulp imagemin",
     "production": "bundle exec gulp --jekyllEnv='production'",
     "sass": "bundle exec gulp sass",
-    "watch": "bundle exec gulp watch"
+    "watch": "bundle exec gulp watch",
+    "clean": "rm -rf node_modules yarn.lock package-lock.json Gemfile.lock"
   },
   "browserslist": [
     "> 1%",
@@ -43,44 +44,24 @@
   },
   "homepage": "https://github.com/ginfuru/Flightdeck/",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "autoprefixer": "^9.6.4",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.6",
-    "browserslist": "^4.7.0",
-    "cryptiles": ">=4.1.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-eslint": "^6.0.0",
-    "gulp-imagemin": "^7.0.0",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
+    "cssnano": "^4.1.7",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
+    "gulp-eslint": "^5.0.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-rsync": "^0.0.8",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-symbols": "^3.2.3",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-watch": "^5.0.0",
-    "natives": "^1.1.6",
-    "prettier": "^2.0.4",
-    "require-dir": "^1.0.0",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^4.41.1",
-    "webpack-stream": "^5.0.0",
-    "yargs": "^14.2.0"
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.1",
+    "webpack": "^4.26.1",
+    "webpack-stream": "^5.1.1"
   },
   "dependencies": {}
 }
