--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "flightdeck",
   "version": "0.9.9",
   "description": "Flightdeck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
-  "main": "gulpfile.js",
+  "author": "Ed Heltzel",
+  "license": "MIT",
+  "homepage": "https://github.com/flight-deck/Flightdeck/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ginfuru/Flightdeck.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ginfuru/Flightdeck/issues"
+  },
+  "keywords": ["Autoprefixer","Browsersync","gulp","imagemin","Jekyll","PostCSS","Sass","Webpack"],
   "scripts": {
     "preinstall": "bundle install --path vendor/bundle",
     "start": "bundle exec gulp",
@@ -23,26 +33,6 @@
     "last 4 versions",
     "Firefox ESR"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ginfuru/Flightdeck.git"
-  },
-  "keywords": [
-    "Autoprefixer",
-    "Browsersync",
-    "gulp",
-    "imagemin",
-    "Jekyll",
-    "PostCSS",
-    "Sass",
-    "Webpack"
-  ],
-  "author": "Ginfuru",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ginfuru/Flightdeck/issues"
-  },
-  "homepage": "https://github.com/ginfuru/Flightdeck/",
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
@@ -62,6 +52,5 @@
     "gulp-uglify": "^3.0.1",
     "webpack": "^4.26.1",
     "webpack-stream": "^5.1.1"
-  },
-  "dependencies": {}
+  }
 }
