--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,23 @@
 {
   "files.exclude": {
-    "**/.sass-cache/": true,
-    "**/_site/": true,
-    ".bundle": true
+    // "**/.sass-cache/": true,
+    // ".jekyll-cache/": true,
+    // "**/_site/": true,
+    // ".bundle": true
+    // "node_modules/": true
+    // "vendor/": true
   },
   "search.exclude": {
+    "node_modules/": true,
+    "vendor/": true,
+    "_site/**": true,
+    "**/css/*": true,
+    "*.lock": true,
     "**/.sass-cache/": true,
     "**/.publish/": true,
-    "_site/**": true,
+    ".jekyll-cache/**": true,
     ".vscode/**": true,
-    "*.lock": true,
-    "node_modules/": true,
     ".bundle/": true,
-    "**/css/*": true,
   },
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#5c28fa",
