--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
   "files.exclude": {
-    // "**/.sass-cache/": true,
-    // ".jekyll-cache/": true,
+    "**/.sass-cache/": true,
+    ".jekyll-cache/": true,
     // "**/_site/": true,
-    // ".bundle": true
-    // "node_modules/": true
-    // "vendor/": true
+    ".bundle": true
+    "node_modules/": true
+    "vendor/": true
   },
   "search.exclude": {
     "node_modules/": true,
