now using gulp v4

--- a/package.json
+++ b/package.json
@@ -12,21 +12,32 @@
   "bugs": {
     "url": "https://github.com/ginfuru/Flightdeck/issues"
   },
-  "keywords": ["Autoprefixer","Browsersync","gulp","imagemin","Jekyll","PostCSS","Sass","Webpack"],
+  "keywords": [
+    "Autoprefixer",
+    "Browsersync",
+    "gulp",
+    "imagemin",
+    "Jekyll",
+    "PostCSS",
+    "Sass",
+    "Webpack"
+  ],
   "scripts": {
     "preinstall": "bundle install --path vendor/bundle",
     "start": "bundle exec gulp",
-    "test": "bundle exec gulp test",
-    "browsersync": "bundle exec gulp browsersync",
-    "browsersync-production": "bundle exec gulp browsersync --jekyllEnv='production'",
+    "imagemin": "bundle exec gulp images",
+    "jekyll": "bundle exec gulp jekyll",
+    "sass": "bundle exec gulp css",
+    "js": "bundle exec gulp js",
     "build": "bundle exec gulp build --jekyllEnv='production'",
-    "deploy": "bundle exec gulp deploy",
-    "eslint": "bundle exec gulp eslint",
-    "imagemin": "bundle exec gulp imagemin",
-    "production": "bundle exec gulp --jekyllEnv='production'",
-    "sass": "bundle exec gulp sass",
-    "watch": "bundle exec gulp watch",
-    "clean": "rm -rf node_modules yarn.lock package-lock.json Gemfile.lock"
+    "deploy:test": "./.liftoffrc ready",
+    "deploy": "./.liftoffrc ready go",
+    "clean": "yarn clean:ruby & yarn clean:node",
+    "clean:ruby": "rm -rf vendor/ .bundle/ Gemfile.lock",
+    "clean:node": "rm -rf node_modules yarn.lock package-lock.json",
+    "clean:site": "rm -rf _site/ .jekyll-cache",
+    "purge": "yarn clean:ruby & yarn clean:node & yarn clean:site",
+    "fresh": "yarn clean:ruby & yarn clean:node & yarn clean:site && yarn install"
   },
   "browserslist": [
     "> 1%",
@@ -41,14 +52,16 @@
     "browser-sync": "^2.26.3",
     "cssnano": "^4.1.7",
     "del": "^3.0.0",
+    "fibers": "^5.0.0",
     "gulp": "^4.0.0",
-    "gulp-eslint": "^5.0.0",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.1",
     "webpack": "^4.26.1",
     "webpack-stream": "^5.1.1"
