--- a/package.json
+++ b/package.json
@@ -1,30 +1,16 @@
 {
   "name": "flightdeck",
-  "version": "0.9.9",
+  "version": "1.0.0",
   "description": "Flightdeck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
-  "main": "gulpfile.js",
-  "scripts": {
-    "preinstall": "bundle install --path vendor/bundle",
-    "start": "bundle exec gulp",
-    "test": "bundle exec gulp test",
-    "browsersync": "bundle exec gulp browsersync",
-    "browsersync-production": "bundle exec gulp browsersync --jekyllEnv='production'",
-    "build": "bundle exec gulp build --jekyllEnv='production'",
-    "deploy": "bundle exec gulp deploy",
-    "eslint": "bundle exec gulp eslint",
-    "imagemin": "bundle exec gulp imagemin",
-    "production": "bundle exec gulp --jekyllEnv='production'",
-    "sass": "bundle exec gulp sass",
-    "watch": "bundle exec gulp watch"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 4 versions",
-    "Firefox ESR"
-  ],
+  "author": "Ed Heltzel",
+  "license": "MIT",
+  "homepage": "https://github.com/flight-deck/Flightdeck/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ginfuru/Flightdeck.git"
+    "url": "https://github.com/flight-deck/Flightdeck.git"
+  },
+  "bugs": {
+    "url": "https://github.com/flight-deck/Flightdeck/issues"
   },
   "keywords": [
     "Autoprefixer",
@@ -34,53 +20,53 @@
     "Jekyll",
     "PostCSS",
     "Sass",
-    "Webpack"
+    "Webpack",
+    "Starter Project",
+    "Flightdeck",
+    "static site generator"
   ],
-  "author": "Ginfuru",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ginfuru/Flightdeck/issues"
+  "scripts": {
+    "preinstall": "bundle install --path vendor/bundle",
+    "start": "bundle exec gulp",
+    "imagemin": "bundle exec gulp images",
+    "jekyll": "bundle exec gulp jekyll",
+    "sass": "bundle exec gulp css",
+    "js": "bundle exec gulp js",
+    "build": "bundle exec gulp build --jekyllEnv='production'",
+    "deploy:test": "./.liftoffrc ready",
+    "deploy": "./.liftoffrc ready go",
+    "clean": "npm run clean:ruby & npm run clean:node",
+    "clean:ruby": "rm -rf vendor/ .bundle/ Gemfile.lock",
+    "clean:node": "rm -rf node_modules yarn.lock package-lock.json",
+    "clean:site": "rm -rf _site/ .jekyll-cache",
+    "purge": "npm run clean:ruby & npm run clean:node & npm run clean:site",
+    "fresh": "npm run clean:ruby & npm run clean:node & npm run clean:site && yarn run install"
   },
-  "homepage": "https://github.com/ginfuru/Flightdeck/",
+  "browserslist": [
+    "> 1%",
+    "last 4 versions",
+    "Firefox ESR"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "autoprefixer": "^9.6.4",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.6",
-    "browserslist": "^4.7.0",
-    "cryptiles": ">=4.1.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^8.0.0",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
+    "cssnano": "^4.1.7",
+    "del": "^3.0.0",
+    "fibers": "^5.0.0",
+    "gulp": "^4.0.0",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-eslint": "^6.0.0",
-    "gulp-imagemin": "^7.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-rsync": "^0.0.8",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-symbols": "^3.2.3",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-watch": "^5.0.0",
-    "natives": "^1.1.6",
-    "prettier": "^2.0.4",
-    "require-dir": "^1.0.0",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^4.41.1",
-    "webpack-stream": "^5.0.0",
-    "yargs": "^14.2.0"
-  },
-  "dependencies": {}
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.1",
+    "webpack": "^4.26.1",
+    "webpack-stream": "^5.1.1"
+  }
 }
