--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
-    "autoprefixer": "^9.3.1",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
     "cssnano": "^4.1.7",
-    "del": "^3.0.0",
+    "del": "^6.0.0",
     "fibers": "^5.0.0",
     "gulp": "^4.0.0",
     "gulp-dart-sass": "^1.0.2",
@@ -62,10 +62,11 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.1",
+    "postcss": "^8.2.8",
     "webpack": "^4.26.1",
     "webpack-stream": "^5.1.1"
   }
