--- a/package.json
+++ b/package.json
@@ -48,15 +48,14 @@
     "Firefox ESR"
   ],
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
     "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
     "cssnano": "^4.1.7",
     "del": "^6.0.0",
     "fibers": "^5.0.0",
     "gulp": "^4.0.0",
+    "gulp-bundle-assets": "^2.29.0",
+    "gulp-concat": "^2.6.1",
     "gulp-dart-sass": "^1.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^7.1.0",
@@ -64,10 +63,10 @@
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.1",
-    "postcss": "^8.2.8",
-    "webpack": "^4.26.1",
-    "webpack-stream": "^5.1.1"
+    "gulp-uglify": "^3.0.2",
+    "postcss": "^8.2.8"
+  },
+  "dependencies": {
+    "gulp-sourcemaps": "^3.0.0"
   }
 }
