fixes endless loop of watch files for jekyll - adds support for rebuild of jekyll with config files - adds environment config files - changes npm scripts --- purge now removes all ruby, node, site files and reinstalls gems and node packages --- adds clean:all - adds assets with underscore to directories so jekyll will not copy them to the _site folder - this causes an issue where jekyll just deletes the css, js, images forlder

--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >
   Flightdeck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ginfuru
-github_username: ginfuru
+instagram_username: edheltzel
+github_username: edheltzel
 
 # SEO
 #image: /assets/images/open_graph_image.png
@@ -28,7 +28,6 @@ gaCode: # UA-XXXXXXXX-XX
 
 # Build settings
 markdown: kramdown
-incremental: true
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
