gulp dest update - removes underscore directories as src - output dest are not in the jekyll's dest output. - changes optimization level to 2 for performance - gives a verbose output for image optimization - updates readme

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ github_username: edheltzel
 gaCode: # UA-XXXXXXXX-XX
 
 # Build settings
+keep_files: [assets]
 markdown: kramdown
 plugins:
   - jekyll-feed
