adds options for verbose to imagemin output

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,8 @@
     "**/.sass-cache/": true,
     ".jekyll-cache/": true,
     // "**/_site/": true,
-    ".bundle": true
-    "node_modules/": true
+    ".bundle": true,
+    "node_modules/": true,
     "vendor/": true
   },
   "search.exclude": {
