--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 title: 'Flightdeck: A Scaffold for Jekyll'
 email: client-email@client_domain.com
-description: >
-  Flightdeck is a scaffold and starter project for Jekyll that uses an opinionated modern front-end workflow.
+description: Flightdeck is a scaffold & starter project for Jekyll that uses an opinionated workflow.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: edheltzel
 github_username: edheltzel
 
+#flightdeck
+flightdeck:
+  homepage: 'https://github.com/flight-deck/flightdeck-jekyll'
 # SEO
 #image: /assets/images/open_graph_image.png
 gaCode: # UA-XXXXXXXX-XX
