--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ doc/
 # Gem Yarn NPM
 *.lock
 *-lock.json
+.DS_Store
+applet
+application.linux-arm64
+application.linux-armv6hf
+application.linux32
+application.linux64
+application.windows32
+application.windows64
+application.macosx
+out
